# film-app-django

./: pyproject.toml
film/: models.py  serializers.py  urls.py  views.py
film/migrations/: 0001_initial.py
film/tests/: test_views.py  tests.py
film_app/: settings.py  urls.py
